2-col mobile portfolio grid, fix hover text top-left alignment

--- a/agency-jekyll-theme-gh-pages/_includes/css/agency.css
+++ b/agency-jekyll-theme-gh-pages/_includes/css/agency.css
@@ -615,7 +615,6 @@ section h3.section-subheading {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    padding: 16px 0;
 }
 
 #portfolio .portfolio-item .portfolio-link:hover .portfolio-hover {
@@ -624,7 +623,7 @@ section h3.section-subheading {
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
     width: 100%;
-    padding: 0 18px;
+    padding: 16px 18px 0;
     text-align: left;
     color: #fff;
 }
